--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,7 +14,7 @@ spring.h2.console.path=/db
 spring.jpa.show-sql: true
 
 # microservices url
-ms.auth=Envforauditapp-env.eba-emfe4mht.ap-south-1.elasticbeanstalk.com/auth
+ms.auth=localhost:8100/auth
 
 spring.cloud.compatibility-verifier.enabled=false
 
